@startuml

title __ADAPTERSFOLDER's Class Diagram__\n

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      class com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter {
          ~ itemArray : SparseBooleanArray
          - items : ArrayList<Exercise>
          - mContext : Context
          - mWorkoutid : int
          + ExerciseAdapter()
          + getItemArray()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      interface com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener {
          {abstract} + onExerciseClick()
          {abstract} + onExerciseLongClick()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      class com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder {
          - mDone : RadioButton
          - mExerciseKg : TextView
          - mExerciseName : TextView
          - mExerciseReps : TextView
          - parentLayout : RelativeLayout
          + ViewHolder()
          + onClick()
          + onLongClick()
          - setChecked()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      class com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter {
          + WorkoutAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      interface com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener {
          {abstract} + onWorkoutClick()
          {abstract} + onWorkoutLongClick()
      }
    }
  }
  

  namespace com.example.fitnesstracker {
    namespace AdaptersFolder {
      class com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder {
          - mArrow : ImageView
          - mTitle : TextView
          - parentLayout : RelativeLayout
          + ViewHolder()
          + onClick()
          + onLongClick()
      }
    }
  }
  

  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter o-- com.example.fitnesstracker.Database.DatabaseHelper : mDb
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter o-- com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener : mOnExerciseListener
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter +-down- com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter +-down- com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder .up.|> android.view.View.OnLongClickListener
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.ViewHolder o-- com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener : onExerciseListener
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter o-- com.example.fitnesstracker.Database.DatabaseHelper : mDb
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter o-- com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener : mOnWorkoutListener
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter +-down- com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter +-down- com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder .up.|> android.view.View.OnLongClickListener
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.ViewHolder o-- com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener : mOnWorkoutListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
